--- a/html/index.html
+++ b/html/index.html
@@ -1,1 +1,11 @@
-<h1>foo</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>File host example</title>
+    <script src="index.js"></script>
+  </head>
+  <body>
+    <h1>Welcome!</h1>
+    <button id="main_button">Click me!</button>
+  </body>
+</html>
