add css to demo

--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>File host example</title>
     <script src="index.js"></script>
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
   <body>
     <h1>Welcome!</h1>
